--- a/src/app/game/current-game/current-game.component.css
+++ b/src/app/game/current-game/current-game.component.css
@@ -8,10 +8,6 @@
   height: 50%;
 }
 
-.player-section.color1 {
-  margin-top: -70px;
-}
-
 .color1 {
   background-color: #e7b068;
 }
@@ -31,7 +27,7 @@
 .floating-pause-button {
   width: 70px;
   height: 70px;
-  position: relative;
+  position: absolute;
   z-index: 1;
   top: 50%;
   left: 50%;
