--- a/src/app/game/start-game/start-game.component.css
+++ b/src/app/game/start-game/start-game.component.css
@@ -1,6 +1,6 @@
 #start-game-section {
   height: 100%;
-  padding-top: 20px;
+  padding-top: 100px;
 }
 
 mat-card {
